@@ -94,6 +94,14 @@ Xxx Xxx 99 99:99:99 UTC 2010
           to write out _MTN/options on --dry-run
           (fixes monotone bug #30225)
 
+        - monotone does no longer warn about missing implicit includes
+          when dealing with restricted file sets
+          (fixes monotone bug #30291)
+
+        - A regression in 0.48 made a path-restricted `mtn log' show 
+          revisions, in which not the picked path(s), but one of its parents
+          were changed.  This has been fixed.
+
         - `mtn trusted` will no longer accept single bogus revision ids,    
           but instead validates if the given revision really exists in the
           current database.
